--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -8,8 +8,8 @@
                 <span class="post-date"><a href="#"><time class="entry-date"
                                                           datetime="{{ post.create_time }}">{{ post.create_time }}</time></a></span>
                 <span class="post-author"><a href="#">{{ post.user }}</a> </span>
-                <span class="comments-link"><a href="#">{{ comment_list.count }} 评论</a></span>
-                <span class="view-count"><a href="#">100 阅读</a></span>
+                <span class="comments-link"><a href="#">评论 {{ comment_list.count }}</a></span>
+                <span class="view-count"><a href="#">阅读 {{ post.views }}</a></span>
             </div>
         </header>
         <div class="entry-content clearfix">
