--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -11,8 +11,8 @@
                         <time class="entry-date" datetime="{{ post.created_time }}">{{ post.created_time }}
                         </time></a></span>
                     <span class="post-author"><a href="#">{{ post.author }}</a></span>
-                    <span class="comments-link"><a href="#">4 评论</a></span>
-                    <span class="views-count"><a href="#">588 阅读</a></span>
+                    <span class="comments-link"><a href="#">评论 {{ post.comment_counts }}</a></span>
+                    <span class="views-count"><a href="#">阅读 {{ post.views }}</a></span>
                 </div>
             </header>
             <div class="sdfd">
