--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -16,7 +16,7 @@
                 </div>
             </header>
             <div class="sdfd">
-                <p>{{ post.excerpt }}</p>
+                <p>{{ post.excerpt|safe }}</p>
             </div>
             <div class="read-more cl-effect-14">
                 <a href="{% url 'blog:detail' post.pk %}" class="more-link">继续阅读 <span class="meta-nav">→</span></a>
